# PetiteLuneDMX

./: .gitignore  build_exe.bat  config.py  dmx_driver.py  index.html  index.js  main.py  package-lock.json  package.json  requirements.txt  watchdog_runner.py
core/: address_overrides.py  app_paths.py  audio_sync.py  dmx_driver.py  dmx_engine.py  preset_manager.py  version.py
logic/: __init__.py  constants_dmx.py  motion_manager.py
models/: fixtures.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/pdfs/: README.txt
src-tauri/src/: dmx_engine.rs  main.rs  motion_manager.rs
src/components/: MasterSection.tsx  MovingHeadSection.tsx  SceneSection.tsx
src/components/tabs/: DmxConsoleTab.tsx  EffectsTab.tsx  FixtureEditorTab.tsx  FixturesTab.tsx  LiveTab.tsx  PatchTab.tsx  StageTab.tsx
src/data/: fixtures_patch.json  groups.json
src/hooks/: useAudioAnalyzer.ts  useLiveLogic.ts
src/types/: dmx.ts
src/utils/: colorUtils.ts
ui/: config_report.py  constants_ambience.py  main_window.py
ui/components/: ambiance_section.py  dynam_scan_card.py  fixture_card.py  gigabar_card.py  ibiza_card.py  master_ambience_card.py  movements_section.py  rhythm_card.py  spot_card.py  wookie_card.py  xtrem_card.py
ui/controllers/: __init__.py  control_controller.py  presets_controller.py  rhythm_controller.py  spot_controller.py
ui/dialogs/: __init__.py  dynamo_calibration_dialog.py  lyre_calibration_dialog.py
ui/widgets/: channel_view.py  dmx_controls.py  gigabar_color_dialog.py  mode_icon_factory.py  xy_pad.py
(+23 files in other folders)
